Dependency Injection in asp net core - api project - Part II

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 /NetCoreEssential.DependencyInjection/obj
 /NetCoreEssential.DependencyInjection.Api/bin/Debug/netcoreapp2.2
 /NetCoreEssential.DependencyInjection.Api/obj
+/.vs/NetCoreEssential
