Add IOption<> patttern to retrieve complex settings from appSettings.json + extension method to register ConfigurationService in the container. Injecting Class that represent a config section in the school service.

--- a/NetCoreEssential.DependencyInjection.Api/appsettings.json
+++ b/NetCoreEssential.DependencyInjection.Api/appsettings.json
@@ -4,5 +4,19 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "IronPublicKey": "PREFIX_IRON_PUBLIC_KEY_SUFIX",
+  "ComplexIronPublicKey": {
+    "Prefix": "PREFIX_",
+    "Body": {
+      "PartOne": "IRON",
+      "Separator": "_",
+      "PartTwo": {
+        "ValueA": "PUBLIC",
+        "Separator": "_",
+        "ValueB": "KEY"
+      }
+    },
+    "Sufix": "_SUFIX"
+  }
 }
